--- a/index.html
+++ b/index.html
@@ -28,5 +28,26 @@
             <h1>Ramai Larangan Musisi Gaungkan Peringatan Darurat, Ada Perlindungan Hukum hingga Alternatifnya</h1>
         </div>                      
     </div>
+    <div class="container grid-2">
+        <div class="box-article">
+            <div class="article-pict"><img src="pict-plane.jpeg"></div>
+            <h1>Bersiap Tampil di Paris 2024, Ni Nengah Widiasih Bidik Medali Ketiga Paralimpiade</h1>
+        </div>
+        <div class="box-article">
+            <h1>Profil Seabank, Didirikan Orang Tua Prabowo Kini Dikendalikan Pemilik Shopee</h1>
+        </div>        
+        <div class="box-article">
+            <div class="article-pict"><img src="pict-plane.jpeg"></div>
+            <h1>Akhir Kasus Polwan Tegur Pria Disebut Tak Sopan Diajak Bicara Sambil Makan</h1>
+        </div>  
+        <div class="box-article">
+            <div class="article-pict"><img src="pict-plane.jpeg"></div>
+            <h1>Kata-Kata Terakhir Marie Antoinette Sebelum Dieksekusi Mati: Saya Tidak Ingin Apa-Apa Lagi</h1>
+        </div>        
+        <div class="box-article">
+            <div class="article-pict"><img src="pict-plane.jpeg"></div>
+            <h1>Ramai Larangan Musisi Gaungkan Peringatan Darurat, Ada Perlindungan Hukum hingga Alternatifnya</h1>
+        </div>                      
+    </div>    
 </body>
 </html>
