Responsive Design scale

--- a/index.html
+++ b/index.html
@@ -27,8 +27,6 @@
             <div class="article-pict"><img src="pict-plane.jpeg"></div>
             <h1>Ramai Larangan Musisi Gaungkan Peringatan Darurat, Ada Perlindungan Hukum hingga Alternatifnya</h1>
         </div>                      
-    </div>
-    <div class="container grid-2">
         <div class="box-article">
             <div class="article-pict"><img src="pict-plane.jpeg"></div>
             <h1>Bersiap Tampil di Paris 2024, Ni Nengah Widiasih Bidik Medali Ketiga Paralimpiade</h1>
@@ -47,7 +45,27 @@
         <div class="box-article">
             <div class="article-pict"><img src="pict-plane.jpeg"></div>
             <h1>Ramai Larangan Musisi Gaungkan Peringatan Darurat, Ada Perlindungan Hukum hingga Alternatifnya</h1>
-        </div>                      
+        </div>  
+        <div class="box-article">
+            <div class="article-pict"><img src="pict-plane.jpeg"></div>
+            <h1>Ramai Larangan Musisi Gaungkan Peringatan Darurat, Ada Perlindungan Hukum hingga Alternatifnya</h1>
+        </div>
+        <div class="box-article">
+            <div class="article-pict"><img src="pict-plane.jpeg"></div>
+            <h1>Ramai Larangan Musisi Gaungkan Peringatan Darurat, Ada Perlindungan Hukum hingga Alternatifnya</h1>
+        </div>
+        <div class="box-article">
+            <div class="article-pict"><img src="pict-plane.jpeg"></div>
+            <h1>Ramai Larangan Musisi Gaungkan Peringatan Darurat, Ada Perlindungan Hukum hingga Alternatifnya</h1>
+        </div>
+        <div class="box-article">
+            <div class="article-pict"><img src="pict-plane.jpeg"></div>
+            <h1>Ramai Larangan Musisi Gaungkan Peringatan Darurat, Ada Perlindungan Hukum hingga Alternatifnya</h1>
+        </div>
+        <div class="box-article">
+            <div class="article-pict"><img src="pict-plane.jpeg"></div>
+            <h1>Ramai Larangan Musisi Gaungkan Peringatan Darurat, Ada Perlindungan Hukum hingga Alternatifnya</h1>
+        </div>                    
     </div>    
 </body>
 </html>
